// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadcrumbGroup /> should render a breadcrumb by itself 1`] = `
<Breadcrumb
  href="/test"
  type="base"
  useReactRouter={true}
>
  <Anchor
    className="baseCrumb"
    data-component-type="breadcrumb"
    href="/test"
  >
    <a
      className="baseCrumb"
      data-component-type="breadcrumb"
      href="/test"
    >
      Create
    </a>
  </Anchor>
</Breadcrumb>
`;

exports[`<BreadcrumbGroup /> should render a simple breadcrumbGroup 1`] = `
<BreadcrumbGroup>
  <div
    className="breadcrumbs"
    data-component-type="breadcrumb_group"
  >
    <Breadcrumb
      href="/test"
      type="base"
      useReactRouter={true}
    >
      <Anchor
        className="baseCrumb"
        data-component-type="breadcrumb"
        href="/test"
      >
        <a
          className="baseCrumb"
          data-component-type="breadcrumb"
          href="/test"
        >
          Dashboard
        </a>
      </Anchor>
    </Breadcrumb>
    <Breadcrumb
      anchorComponentProps={
        Object {
          "useReactRouter": false,
        }
      }
      href="/test"
      type="base"
      useReactRouter={true}
    >
      <Anchor
        anchorComponentProps={
          Object {
            "useReactRouter": false,
          }
        }
        className="baseCrumb"
        data-component-type="breadcrumb"
        href="/test"
      >
        <a
          className="baseCrumb"
          data-component-type="breadcrumb"
          href="/test"
        >
          Tasks
        </a>
      </Anchor>
    </Breadcrumb>
    <Breadcrumb
      href="/test"
      type="active"
      useReactRouter={true}
    >
      <Anchor
        className="activeCrumb"
        data-component-type="breadcrumb"
        href="/test"
      >
        <a
          className="activeCrumb"
          data-component-type="breadcrumb"
          href="/test"
        >
          Create
        </a>
      </Anchor>
    </Breadcrumb>
  </div>
</BreadcrumbGroup>
`;
